"thread_count" has been added and "singlethread" has been renamed as "single_thread".

--- a/directoryLister/.config/config.json
+++ b/directoryLister/.config/config.json
@@ -2,6 +2,7 @@
     "base_directory": null,
     "body": "./template.html",
     "css": "./stylesheet.css",
+    "thread_count": 10,
     "js": "./javascript.js",
     "default_locale": "en",
     "date_format": "%Y-%m-%d %H:%M:%S",
